force-app/main/default/objects/Tech_Profile__c/Tech_Profile__c.object-meta.xml
<CustomObject>
    <description>Plumbers profile.</description>
    <label>Tech Profile</label>
    <nameField>
        <label>Tech Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>