force-app/main/default/objects/Tech_Profile__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main region that the technician acts.</description>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Tech Profiles</relationshipLabel>
    <relationshipName>Tech_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>