force-app/main/default/objects/Tech_Profile__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related the tech profile to the salesforce user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tech_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>